src/objects/Service_Centre_City__c.object
<CustomObject>
    <description>This object will contain the names of the cities &amp; the related service centres.</description>
    <fields>
        <fullName>Branch_State__c</fullName>
        <label>Branch State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <displayFormat>CM-{000}</displayFormat>
        <externalId>true</externalId>
        <label>Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;India&quot;</defaultValue>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>24 PARAGANAS NORTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 PARAGANAS SOUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADILABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHMADABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHMEDNAGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIZAWL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AJMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALIGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALIRAJPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLAHABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLPPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALMORA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALWAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMARAVATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMBALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMBEDKAR NAGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMETHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMRELI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMRITSAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANANTNAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANANTPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANJAW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANUGUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANUPPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIYALUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASANSOL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Upcountry__c</fullName>
        <label>Local/ Upcountry</label>
        <picklist>
            <picklistValues>
                <fullName>LOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPCOUNTRY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pin Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Center__c</fullName>
        <label>Service Center</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Centre_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Centre Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Centre_City</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ANDHRA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUNCHAL PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIHAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANDIGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHATTISGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DADRA &amp; NAGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAMAN &amp; DIU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUJRAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARYANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIMACHAL PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAMMU &amp; KASHMIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JHARKHAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARNATAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KERALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHYA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAHARASHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEGHALAYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIZORAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAGALAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORRISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PONDICHERRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUNJAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJASTHAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIKKIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAMIL NADU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRIPURA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Centre City</label>
    <listViews>
        <fullName>All</fullName>
        <columns>State__c</columns>
        <columns>District__c</columns>
        <columns>NAME</columns>
        <columns>Service_Center__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>City</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Centre City</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>